@@ -3713,25 +3713,18 @@ EXTRA_DIST += \
 
 # ------------------------------------------------------------------------------
 if HAVE_SYSV_COMPAT
-sysvinit_DATA = \
-	docs/sysvinit/README
 
 varlog_DATA = \
 	docs/var-log/README
-
-docs/sysvinit/README: docs/sysvinit/README.in
-	$(SED_PROCESS)
 
 docs/var-log/README: docs/var-log/README.in
 	$(SED_PROCESS)
 
 CLEANFILES += \
-	docs/sysvinit/README \
 	docs/var-log/README
 endif
 
 EXTRA_DIST += \
-	docs/sysvinit/README.in \
 	docs/var-log/README.in
 
 SOCKETS_TARGET_WANTS += \
