@@ -1,27 +1,0 @@
-You are looking for the traditional init scripts in @SYSTEM_SYSVINIT_PATH@,
-and they are gone?
-
-Here's an explanation on what's going on:
-
-You are running a systemd-based OS where traditional init scripts have
-been replaced by native systemd services files. Service files provide
-very similar functionality to init scripts. To make use of service
-files simply invoke "systemctl", which will output a list of all
-currently running services (and other units). Use "systemctl
-list-unit-files" to get a listing of all known unit files, including
-stopped, disabled and masked ones. Use "systemctl start
-foobar.service" and "systemctl stop foobar.service" to start or stop a
-service, respectively. For further details, please refer to
-systemctl(1).
-
-Note that traditional init scripts continue to function on a systemd
-system. An init script @SYSTEM_SYSVINIT_PATH@/foobar is implicitly mapped
-into a service unit foobar.service during system initialization.
-
-Thank you!
-
-Further reading:
-        man:systemctl(1)
-        man:systemd(1)
-        http://0pointer.de/blog/projects/systemd-for-admins-3.html
-        http://www.freedesktop.org/wiki/Software/systemd/Incompatibilities
